--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "normalize.css": "^8.0.1",
     "nuxt": "^2.15.8",
     "nuxt-gsap-module": "^1.7.0",
+    "raw-loader": "^4.0.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/svg": "^0.4.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "sass": "^1.51.0",
